--- a/pract6/package.json
+++ b/pract6/package.json
@@ -6,7 +6,7 @@
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "",
+    "author": "Laxminarayan Raval",
     "license": "ISC",
     "dependencies": {
       "dotenv": "^10.0.0",
